--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -27,16 +27,16 @@ hosted on Twitter Spaces for the most up-to-date progress on the L1 transition.
 
 :::
 
-Validators remain critical for the ongoing operation of the Helium Network and continue to earn HNT
-rewards for their role in supporting the Helium ecosystem until the L1 transition is complete.
+Validators were critical for the ongoing operation of the Helium Network and continued to earn HNT
+rewards for their role in supporting the Helium ecosystem until the L1 transition completion.
 
-Validators currently maintain the Network and provide vital operations, including validating
+Validators maintained the Network and provided vital operations, including validating
 transactions and producing blocks from which all Network participants benefit. One of the impacts of
-the passing of HIP-70 and transitioning L1 is that the role Validators play as we know it today will
-no longer be required, and Validators will be sunset by the end of Q1 2023 after the transition is
+the passing of HIP-70 and transitioning L1 is that the role Validators play as we know it will
+no longer be required, and Validators are sunsetted by the end of Q1 2023 after the transition is
 complete.
 
-Validators who remain staked receive new vote escrowed tokens (veHNT) based on their staked HNT
+Validators who remained staked receive new vote escrowed tokens (veHNT) based on their staked HNT
 amount and lock-up period. Post-migration, veHNT will be the only way to vote in the Helium Network.
 Vote escrowed tokens will be used to vote in DAO and subDAO governance and open a world of
 opportunities for on-chain voting and voting power delegation.
@@ -46,18 +46,18 @@ Helium Network, and the more voting weight you have, the more influence you can 
 
 ## Key Take Aways
 
-- Until the L1 transition is complete, staked Validators will continue to earn HNT rewards for block
+- Until the L1 transition is completed, staked Validators continued to earn HNT rewards for block
   production.
 - veHNT gives holders voting rights to determine the future of the Helium Network.
-- After the migration, anyone can stake HNT to veHNT, and there will no longer be a 10,000 HNT
+- Post migration, anyone can stake HNT to veHNT, and there will no longer be a 10,000 HNT
   minimum.
-- Validator operators can decide to remain staked and receive veHNT or unstake and remain in
+- Validator operators could decide to remain staked and receive veHNT or unstake and remain in
   cooldown until the completion of the L1 migration.
 - Validators who remain staked receive a 3x veHNT bonus for staked HNT, and their HNT remains locked
   up for the a six-month period as defined in HIP 51.
 - veHNT holders will earn MOBILE or IOT tokens depending on which Helium subDAO they delegate their
   veHNT.
-- After the minimum lock-up period, HNT releases to the owner's wallet.
+- After the minimum lock-up period, HNT releases to the owner's wallet after staking cooldown is selected.
 
 ---
 
@@ -73,25 +73,25 @@ period in exchange for voting rights and voting power in the HeliumDAO as define
 
 Additionally, this provides other benefits, such as earning MOBILE or IOT tokens, if the holder
 stakes to those subDAOs, respectively. After the lock-up period ends, the same amount of HNT
-releases in the owner's wallet and is now transferable, if needed.
+is released back to the owner's wallet and is now transferable, if needed.
 
 ### What Was Staked HNT?
 
 Following [HIP-25](https://github.com/helium/HIP/blob/main/0025-validators.md), Validator operators
 staked 10,000 HNT into a Validator Node. HNT holders could stake multiple Validators if they chose
 to do so. The work of block production moved to Validator nodes, and those elected periodically into
-the Consensus Group receive 6% of HNT emissions as a reward for block production.
+the Consensus Group received 6% of HNT emissions as a reward for block production.
 
 All HNT holders, including Validator stakers, could vote on Helium HIPs as staked and unstaked HNT
 are equally weighted in voting the same. However, HNT holders who elected to join a Validator pool
 could not decide personally on voting as the pool operator controlled their voting power. In all
 known cases, pool operators did not participate in governance.
 
-### What Are the Staking Rewards?
+### What were the Staking Rewards?
 
-Currently, Validators serve two roles in the Network, block production and validating
-Proof-of-Coverage challenges. Validators earn 6% of emissions for block production when elected to
-the Consensus Group.
+Validators served two roles in the Network, block production and creating and validating
+Proof-of-Coverage challenges. Validators earned 6% of emissions for block production when elected to
+the Consensus Group and 0.85% for Proof-of-Coverage challenges.
 
 ### How Will Staking Rewards Change?
 
@@ -106,8 +106,8 @@ Currently, the IOT and MOBILE subDAO have a 6% token emission pool for veHNT sta
 
 After HIP-51, HIP-52 and HIP-53 are implemented, all the subDAOs combined will receive the non-HST
 emissions of HNT. At this time, this is 68% of emitted HNT and will increase to 69% at the next
-yearly emissions change in August. This emissions curve changes annually such that the subDAOs
-eventually receive 85% of emissions.
+yearly emissions change in August 2023. This emissions curve changes annually such that the subDAOs
+eventually receive 85% of all future HNT emissions.
 
 ### What Are The Benefits of Staking HNT after the subDAOs Are Launched?
 
@@ -139,12 +139,11 @@ pools.**
 
 ### What Happens if I Unstake Today?
 
-If a Validator unstaked on December 15, 2022, the expected release date is around March 9, 2023.
+If a Validator unstaked on January 1st 2023, the expected release date is around March 27th, 2023.
 
 This date assumes a cooldown period of 125,000 blocks with an average block time of 60 seconds, and
-the L1 chain is still running on that date. Based on the information provided since September 2022,
-around the time of the vote, and updates since then, the core developers expect that block
-production on the Helium L1 will discontinue sometime in late Q1 2023 when the implementation of
+the L1 chain is still running on that date. The core developers expect that block
+production on the Helium L1 will discontinue late march 2023 when the implementation of
 HIP-70 is complete.
 
 Any HNT in cooldown at the time the snapshot is taken before the data migration to the new L1 will
@@ -165,9 +164,8 @@ end of the lock-up period, you will receive HNT back to your wallet 1:1 for the 
 
 A lock-up period is a window of time when users are not allowed to transfer their HNT.
 
-You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 6
-and 48 months selectable in days but with block granularity. The minimum lock-up period is subject
-to change between now and the migration date.
+You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 1 day
+and 48 months selectable in days but with block granularity.
 
 Lock-up periods help incentivize long-term holders of HNT and deter short-term speculators and those
 with shorter-term interests in the governance of the Network.
@@ -196,17 +194,21 @@ in HIP-51, which drives greater earnings of HNT for the subDAO.
 As more veHNT holders delegate to a particular subDAO, individual holder earnings will reduce the
 amount of net subDAO token earnings as delegators share the 6% subDAO token emissions.
 
+The more veHNT delegated to a subDAO the more the subDAO Utility score increases and the more HNT
+the subDAO gets at each epoch improving the HNT/subDAO Token ratio. But the more veHNT delegated, 
+the more veHNT holders the 6% will have to be shared between. 
+
 ### How Will Staking Work By Using veHNT?
 
-Anyone can stake any amount of HNT and lock it up for six months (subject to possible change) to
-four years. You choose your unstaking date at the time of lock-up or deciding to keep it on a
+Anyone can stake any amount of HNT and lock it up for 1  day to 1461 days ( 48 months).
+You choose your unstaking date at the time of lock-up or deciding to keep it on a
 rolling lock-up period, called "constant lock-up" before initiating the start or the veHNT decay
 process. The HNT staked is exchanged for veHNT, which provides two benefits:
 
-- Voting in the Helium DAO on new subDAO proposals.
-- Participating in the Governance of the Helium DAO.
+- Voting in the Helium DAO on new subDAO proposals and Participating in the Governance.
+- Receiving an income if the veHNT is delegated to a subDAO.
 
-Anyone can delegate veHNT to a subDAO, one component of a subDAO's Utility Score. Delegating veHNT
+Anyone can delegate veHNT to a subDAO, it sone component of a subDAO's Utility Score. Delegating veHNT
 to a subDAO allows the holder to earn subDAO token rewards proportionally based on the subDAOs
 rules.
 
@@ -214,20 +216,13 @@ rules.
 > allocated to veHNT stakers.
 
 The Helium Network encourages your long-term participation in voting and governance. Those who stake
-HNT for six months will exchange 1:1 HNT to veHNT. Those that stake veHNT for 48 months will receive
-an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a linear scale from 1
+HNT for 1 day will exchange 1:0.06844627 HNT to veHNT. Those that stake veHNT for 48 months will receive
+an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a linear scale from 0.0684462
 to 100.
 
-> For example, I choose to lock-up 10 HNT for six months. I receive 10 veHNT. If I decide to unstake
+> For example, I choose to lock-up 10 HNT for six months. I receive 125 veHNT. If I decide to unstake
 > immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is available to me
 > for use in my wallet.
-
-:::note Lock-up exchange rates subject to change
-
-Proposals are in review and subject to vote to change the linear scale from 0-100 over 48 months not
-1-100 over 42 months.
-
-:::
 
 An amount of locked-up veHNT is a Position and it is possible to own multiple Positions in your
 wallet. Actions taken on locked-up veHNT like delegating, voting, lock-up periods are an all or
@@ -249,29 +244,28 @@ Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms t
 ### Is There a Staking "Genesis" Period?
 
 For the first seven days after Helium's migration onto Solana, there will be a 3x multiplier bonus
-for new veHNT stakers.
+for new veHNT stakers. This is called the "Landrush" multiplier.
 
-New stakers are only eligible to receive this a veHNT bonus during the initial seven-day "Genesis"
+New stakers are only eligible to receive this veHNT bonus during the initial seven-day Landrush
 period. HNT staked after this period will receive veHNT at the normal rate with no multiplier.
 
 For example:
 
-> Staking 10 HNT during this "Genesis" period with a lock duration of six months gets 30 veHNT
-> (10x1x3) that decays from 30 to 0 veHNT at the end of the staking period, and 10 HNT is returned
-> to the wallet.
+> Staking 10 HNT during this Landrush period with a lock duration of six months gets 375 veHNT
+> (10x12.5x3) that if cooldown is selected decays from 375 to 0 veHNT at the end of the staking period,
+> and 10 HNT is returned to the wallet.
 
-> Staking 20 HNT during this "Genesis" period with a lock duration of 24 months returns 2598 veHNT
-> (20x43.3x3), and these decay to 0 veHNT at the end of the staking period, and 20 HNT is returned
-> to the wallet.
+> Staking 20 HNT during this Landrush period with a lock duration of 24 months returns 3000 veHNT
+> (20x50x3), and at the end of the staking period, 20 HNT is returned to the wallet.
 
 Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus reapplied if
-they extend their default 6 month lock-up period. This 3x bonus will be removed if they extend the
-lock-up further after the initial seven days, or veHNT is transfered to another staking position
-after the 7 day period.
+they extend their default 6 month lock-up period. This 3x bonus will not apply to the later extended
+period if they extend the lock-up further after the initial seven days, or veHNT is transfered to another 
+staking position after the 7 day period.
 
 ### Will I Earn HNT by Staking For veHNT?
 
-**No.** HNT staked to veHNT will not earn more HNT, only what they stake will be unlocked at the end
+**No.** HNT staked to veHNT will not earn more HNT, it will only return what they staked at the end
 of their selected lock-up period.
 
 However, when you stake HNT into veHNT, you can delegate your veHNT into one or more subDAOs (such
@@ -280,21 +274,21 @@ delegating to that subDAO.
 
 > For example: When you delegate your veHNT to the IOT subDAO, you receive IOT every epoch that is
 > claimable in your Helium Wallet. If you choose, this IOT can then be burned at the IOT subDAO
-> treasury for HNT, or you may hold your IOT tokens.
+> treasury for HNT, or you may hold your IOT tokens, or stake them into veIOT.
 
 ### How Do I Stake for veHNT After HIP-51 and HIP-70 Are Implemented?
 
 1. If you do not already have HNT in your Helium Wallet, transfer HNT into your Helium Wallet to
    stake.
 2. Using the Helium Wallet App/Realms, stake HNT into veHNT and define the lock-up period and if the
-   decay countdown period starts immediately or lock-up period is rolling with a decay countdown
+   decay cooldown period starts immediately or lock-up period is rolling with a decay countdown
    starting at a future date to be decided (default) The granularity of selection of lock-up period
-   is initially in days.
+   is in days.
 3. Using the Helium Wallet App/Realms, delegate that veHNT into one or more existing subDAOs. You
    may have to complete several transactions depending on how many subDAOs you delegate to, or if
    you want different amounts delegated for different lock-up periods.
 4. Your delegated HNT will count towards the subDAOs Utility Score and provide increased HNT
-   earnings in the subDAO's treasury per epoch.
+   deposits in the subDAO's treasury per epoch.
 
 This process should be simple in the [Helium Wallet App](/wallets/helium-wallet-app). More
 instructions will be provided on Realms usage as we get closer to the Solana migration.
@@ -312,29 +306,29 @@ will be performed within a Solana-compatible Wallet App/Realms or a new version 
 
 ### How much veHNT will I get for each lock-up period?
 
-The table below shows the approximate HNT to veHNT multiplier for each month of starting a stake.
+The table below shows the approximate HNT to veHNT multiplier for example months of staking
 
 This value is multiplied by 3x during the first 7 days after the Solana transition and this
 multiplier lasts as long as the last lock-up period selected in the first 7 days after the solana
 migration.
 
-N/A = Not applicable. There is Currently a minium period of 6 months lock-up. This is subject to
-change and the table below will be updated.
 
-| Months staked | veHNT received |     | Months staked | veHNT received |     | Months staked | veHNT received |     | Months staked | veHNT received |
-| :-----------: | :------------: | --- | :-----------: | :------------: | --- | :-----------: | :------------: | --- | :-----------: | :------------: |
-|       1       |      N/A       |     |      13       |      17.5      |     |      25       |      45.8      |     |      37       |      74.1      |
-|       2       |      N/A       |     |      14       |      19.9      |     |      26       |      48.1      |     |      38       |      76.4      |
-|       3       |      N/A       |     |      15       |      22.2      |     |      27       |      50.5      |     |      39       |      78.8      |
-|       4       |      N/A       |     |      16       |      24.6      |     |      28       |      52.9      |     |      40       |      81.1      |
-|       5       |      N/A       |     |      17       |      26.9      |     |      29       |      55.2      |     |      41       |      83.5      |
-|       6       |      1.0       |     |      18       |      29.3      |     |      30       |      57.6      |     |      42       |      85.9      |
-|       7       |      3.4       |     |      19       |      31.6      |     |      31       |      59.9      |     |      43       |      88.2      |
-|       8       |      5.7       |     |      20       |      34.0      |     |      32       |      62.3      |     |      44       |      90.6      |
-|       9       |      8.1       |     |      21       |      36.4      |     |      33       |      64.6      |     |      45       |      92.9      |
-|      10       |      10.4      |     |      22       |      38.7      |     |      34       |      67.0      |     |      46       |      95.3      |
-|      11       |      12.8      |     |      23       |      41.1      |     |      35       |      69.4      |     |      47       |      97.6      |
-|      12       |      15.1      |     |      24       |      43.4      |     |      36       |      71.7      |     |      48       |     100.0      |
+| Months staked | veHNT received |     | Months staked | veHNT received |   
+| :-----------: | :------------: | --- | :-----------: | :------------: |
+|    1 week     |      0.5       |     |      12       |      25.0      | 
+|    2 weeks    |      1.0       |     |      15       |      17.5      | 
+|       1       |      N/A       |     |      18       |      37.5      | 
+|       2       |      N/A       |     |      21       |      19.9      |
+|       3       |      N/A       |     |      24       |      50.0      |
+|       4       |      N/A       |     |      27       |      24.6      |
+|       5       |      N/A       |     |      30       |      62.5      |
+|       6       |      12.5      |     |      33       |      29.3      | 
+|       7       |      3.4       |     |      36       |      75.0      | 
+|       8       |      5.7       |     |      39       |      34.0      | 
+|       9       |      8.1       |     |      42       |      82.5      | 
+|      10       |      10.4      |     |      45       |      38.7      |
+|      11       |      12.8      |     |      48       |     100.0      |
+
 
 ### Do I Have to Delegate My veHNT to a subDAO?
 
@@ -358,16 +352,16 @@ A 48-month lock-in period has approximately 1461 linear steps between 100 veHNT 
 
 > 4 years x 365.25 days epochs per day = 1461 steps
 
-After 30 mins has passed after staking a single 1 HNT for 48 months, the quantity of veHNT in the
-wallet will decay from 100 veHNT to 99.998575 veHNT. This decrease will recur linearly over all the
+After 1 day has passed after staking a single 1 HNT for 48 months, the quantity of veHNT in the
+wallet will decay from 100 veHNT to 99.86311 veHNT. This decrease will recur linearly over all the
 remaining 48 months until it hits zero.
 
 ### Can I Increase My Staking Lock-up Period At Any Time?
 
 Yes. You can increase your lock-up period to the maximum of 48 months at any time, and each increase
-activates at the next epoch. If the veHNT is delegated you must undelegate, change the period and
-redelegate and lose delegation rewards within that 24 hour Epoch. If those three actions take longer
-than an epoch or are split over two epochs then delegation rewards are lost for two Epochs.
+activates at the start of thenext epoch. If the veHNT is delegated you must undelegate, change the 
+period and redelegate and lose delegation rewards within that 24 hour Epoch. If those three actions take 
+longer than an epoch or are split over two epochs then delegation rewards are lost for two Epochs.
 
 ### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
 
@@ -379,7 +373,7 @@ period for any reason.
 Yes a constant rolling lock-up period will be the default option called Constant Lock-up. The decay
 countdown start point will be positive action needed to start the lock-up cooldown period.
 
-> Staking 10 HNT for 4 years will get approx 1000 veHNT and this will be a rolling 1 year period and
+> Staking 10 HNT for 4 years will get approx 1000 veHNT and this will be a rolling 4 year period and
 > will remain at 1000 veHNT until the decay countdown is activated and this will then decrease
 > linearly over 4 years to 0 veHNT and the HNT is returned.
 
