--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -1,9 +1,9 @@
 ---
 id: migration-overview
-title: Solana Migration Overview
-pagination_label: Solana Migration Overview
-sidebar_label: Solana Migration Overview
-description: Solana Migration Overview
+title: Solana Migration Guides
+pagination_label: Solana Migration Guides
+sidebar_label: Start Here
+description: Solana Migration Guides
 image: https://i.imgur.com/bWAbESE.png
 slug: /solana/migration
 draft: true
