formatting tweaks and removing white space, line wraps

--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -30,11 +30,10 @@ hosted on Twitter Spaces for the most up-to-date progress on the L1 transition.
 Validators were critical for the ongoing operation of the Helium Network and continued to earn HNT
 rewards for their role in supporting the Helium ecosystem until the L1 transition completion.
 
-Validators maintained the Network and provided vital operations, including validating
-transactions and producing blocks from which all Network participants benefit. One of the impacts of
-the passing of HIP-70 and transitioning L1 is that the role Validators play as we know it will
-no longer be required, and Validators are sunsetted by the end of Q1 2023 after the transition is
-complete.
+Validators maintained the Network and provided vital operations, including validating transactions
+and producing blocks from which all Network participants benefit. One of the impacts of the passing
+of HIP-70 and transitioning L1 is that the role Validators play as we know it will no longer be
+required, and Validators are sunsetted by the end of Q1 2023 after the transition is complete.
 
 Validators who remained staked receive new vote escrowed tokens (veHNT) based on their staked HNT
 amount and lock-up period. Post-migration, veHNT will be the only way to vote in the Helium Network.
@@ -49,15 +48,15 @@ Helium Network, and the more voting weight you have, the more influence you can 
 - Until the L1 transition is completed, staked Validators continued to earn HNT rewards for block
   production.
 - veHNT gives holders voting rights to determine the future of the Helium Network.
-- Post migration, anyone can stake HNT to veHNT, and there will no longer be a 10,000 HNT
-  minimum.
+- Post migration, anyone can stake HNT to veHNT, and there will no longer be a 10,000 HNT minimum.
 - Validator operators could decide to remain staked and receive veHNT or unstake and remain in
   cooldown until the completion of the L1 migration.
 - Validators who remain staked receive a 3x veHNT bonus for staked HNT, and their HNT remains locked
   up for the a six-month period as defined in HIP 51.
 - veHNT holders will earn MOBILE or IOT tokens depending on which Helium subDAO they delegate their
   veHNT.
-- After the minimum lock-up period, HNT releases to the owner's wallet after staking cooldown is selected.
+- After the minimum lock-up period, HNT releases to the owner's wallet after staking cooldown is
+  selected.
 
 ---
 
@@ -72,8 +71,8 @@ period in exchange for voting rights and voting power in the HeliumDAO as define
 [HIP-51](https://github.com/helium/HIP/issues/336).
 
 Additionally, this provides other benefits, such as earning MOBILE or IOT tokens, if the holder
-stakes to those subDAOs, respectively. After the lock-up period ends, the same amount of HNT
-is released back to the owner's wallet and is now transferable, if needed.
+stakes to those subDAOs, respectively. After the lock-up period ends, the same amount of HNT is
+released back to the owner's wallet and is now transferable, if needed.
 
 ### What Was Staked HNT?
 
@@ -142,9 +141,8 @@ pools.**
 If a Validator unstaked on January 1st 2023, the expected release date is around March 27th, 2023.
 
 This date assumes a cooldown period of 125,000 blocks with an average block time of 60 seconds, and
-the L1 chain is still running on that date. The core developers expect that block
-production on the Helium L1 will discontinue late march 2023 when the implementation of
-HIP-70 is complete.
+the L1 chain is still running on that date. The core developers expect that block production on the
+Helium L1 will discontinue late march 2023 when the implementation of HIP-70 is complete.
 
 Any HNT in cooldown at the time the snapshot is taken before the data migration to the new L1 will
 be converted to veHNT with a staking release date of six months,
@@ -164,8 +162,8 @@ end of the lock-up period, you will receive HNT back to your wallet 1:1 for the 
 
 A lock-up period is a window of time when users are not allowed to transfer their HNT.
 
-You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 1 day
-and 48 months selectable in days but with block granularity.
+You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 1
+day and 48 months selectable in days but with block granularity.
 
 Lock-up periods help incentivize long-term holders of HNT and deter short-term speculators and those
 with shorter-term interests in the governance of the Network.
@@ -195,34 +193,34 @@ As more veHNT holders delegate to a particular subDAO, individual holder earning
 amount of net subDAO token earnings as delegators share the 6% subDAO token emissions.
 
 The more veHNT delegated to a subDAO the more the subDAO Utility score increases and the more HNT
-the subDAO gets at each epoch improving the HNT/subDAO Token ratio. But the more veHNT delegated, 
-the more veHNT holders the 6% will have to be shared between. 
+the subDAO gets at each epoch improving the HNT/subDAO Token ratio. But the more veHNT delegated,
+the more veHNT holders the 6% will have to be shared between.
 
 ### How Will Staking Work By Using veHNT?
 
-Anyone can stake any amount of HNT and lock it up for 1  day to 1461 days ( 48 months).
-You choose your unstaking date at the time of lock-up or deciding to keep it on a
-rolling lock-up period, called "constant lock-up" before initiating the start or the veHNT decay
-process. The HNT staked is exchanged for veHNT, which provides two benefits:
+Anyone can stake any amount of HNT and lock it up for 1 day to 1461 days ( 48 months). You choose
+your unstaking date at the time of lock-up or deciding to keep it on a rolling lock-up period,
+called "constant lock-up" before initiating the start or the veHNT decay process. The HNT staked is
+exchanged for veHNT, which provides two benefits:
 
 - Voting in the Helium DAO on new subDAO proposals and Participating in the Governance.
 - Receiving an income if the veHNT is delegated to a subDAO.
 
-Anyone can delegate veHNT to a subDAO, it sone component of a subDAO's Utility Score. Delegating veHNT
-to a subDAO allows the holder to earn subDAO token rewards proportionally based on the subDAOs
+Anyone can delegate veHNT to a subDAO, it sone component of a subDAO's Utility Score. Delegating
+veHNT to a subDAO allows the holder to earn subDAO token rewards proportionally based on the subDAOs
 rules.
 
 > For example: If I delegate some veHNT to MOBILE subDAO, I proportionally earn MOBILE rewards
 > allocated to veHNT stakers.
 
 The Helium Network encourages your long-term participation in voting and governance. Those who stake
-HNT for 1 day will exchange 1:0.06844627 HNT to veHNT. Those that stake veHNT for 48 months will receive
-an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a linear scale from 0.0684462
-to 100.
+HNT for 1 day will exchange 1:0.06844627 HNT to veHNT. Those that stake veHNT for 48 months will
+receive an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a linear scale
+from 0.0684462 to 100.
 
-> For example, I choose to lock-up 10 HNT for six months. I receive 125 veHNT. If I decide to unstake
-> immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is available to me
-> for use in my wallet.
+> For example, I choose to lock-up 10 HNT for six months. I receive 125 veHNT. If I decide to
+> unstake immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is
+> available to me for use in my wallet.
 
 An amount of locked-up veHNT is a Position and it is possible to own multiple Positions in your
 wallet. Actions taken on locked-up veHNT like delegating, voting, lock-up periods are an all or
@@ -252,16 +250,16 @@ period. HNT staked after this period will receive veHNT at the normal rate with 
 For example:
 
 > Staking 10 HNT during this Landrush period with a lock duration of six months gets 375 veHNT
-> (10x12.5x3) that if cooldown is selected decays from 375 to 0 veHNT at the end of the staking period,
-> and 10 HNT is returned to the wallet.
+> (10x12.5x3) that if cooldown is selected decays from 375 to 0 veHNT at the end of the staking
+> period, and 10 HNT is returned to the wallet.
 
 > Staking 20 HNT during this Landrush period with a lock duration of 24 months returns 3000 veHNT
 > (20x50x3), and at the end of the staking period, 20 HNT is returned to the wallet.
 
 Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus reapplied if
 they extend their default 6 month lock-up period. This 3x bonus will not apply to the later extended
-period if they extend the lock-up further after the initial seven days, or veHNT is transfered to another 
-staking position after the 7 day period.
+period if they extend the lock-up further after the initial seven days, or veHNT is transfered to
+another staking position after the 7 day period.
 
 ### Will I Earn HNT by Staking For veHNT?
 
@@ -312,23 +310,21 @@ This value is multiplied by 3x during the first 7 days after the Solana transiti
 multiplier lasts as long as the last lock-up period selected in the first 7 days after the solana
 migration.
 
-
-| Months staked | veHNT received |     | Months staked | veHNT received |   
+| Months staked | veHNT received |     | Months staked | veHNT received |
 | :-----------: | :------------: | --- | :-----------: | :------------: |
-|    1 week     |      0.5       |     |      12       |      25.0      | 
-|    2 weeks    |      1.0       |     |      15       |      17.5      | 
-|       1       |      N/A       |     |      18       |      37.5      | 
+|    1 week     |      0.5       |     |      12       |      25.0      |
+|    2 weeks    |      1.0       |     |      15       |      17.5      |
+|       1       |      N/A       |     |      18       |      37.5      |
 |       2       |      N/A       |     |      21       |      19.9      |
 |       3       |      N/A       |     |      24       |      50.0      |
 |       4       |      N/A       |     |      27       |      24.6      |
 |       5       |      N/A       |     |      30       |      62.5      |
-|       6       |      12.5      |     |      33       |      29.3      | 
-|       7       |      3.4       |     |      36       |      75.0      | 
-|       8       |      5.7       |     |      39       |      34.0      | 
-|       9       |      8.1       |     |      42       |      82.5      | 
+|       6       |      12.5      |     |      33       |      29.3      |
+|       7       |      3.4       |     |      36       |      75.0      |
+|       8       |      5.7       |     |      39       |      34.0      |
+|       9       |      8.1       |     |      42       |      82.5      |
 |      10       |      10.4      |     |      45       |      38.7      |
 |      11       |      12.8      |     |      48       |     100.0      |
-
 
 ### Do I Have to Delegate My veHNT to a subDAO?
 
@@ -359,9 +355,10 @@ remaining 48 months until it hits zero.
 ### Can I Increase My Staking Lock-up Period At Any Time?
 
 Yes. You can increase your lock-up period to the maximum of 48 months at any time, and each increase
-activates at the start of thenext epoch. If the veHNT is delegated you must undelegate, change the 
-period and redelegate and lose delegation rewards within that 24 hour Epoch. If those three actions take 
-longer than an epoch or are split over two epochs then delegation rewards are lost for two Epochs.
+activates at the start of thenext epoch. If the veHNT is delegated you must undelegate, change the
+period and redelegate and lose delegation rewards within that 24 hour Epoch. If those three actions
+take longer than an epoch or are split over two epochs then delegation rewards are lost for two
+Epochs.
 
 ### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
 
