--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -43,12 +43,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Learn More about Solana{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
-      <a className="quicklink quicklinkgreen " href="/solana/primer">
-        Get a Primer on Solana Programming{' '}
+      <a className="quicklink quicklinkgreen " href="/solana/migration/hotspot-operator">
+        Read the Migration Guides{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
       <a className="quicklink quicklinkred" href="/oracles">
-        Learn about Oracles{' '}
+        Get a Primer on Solana Programming{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
       </a>
     </div>
