solana migration page

--- a/docs/solana/migration-overview.mdx
+++ b/docs/solana/migration-overview.mdx
@@ -11,92 +11,111 @@ draft: true
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-<!--TODO: header description, 2 sentences or less  -->
+The Helium Network is migrating to the Solana blockchain, and this documentation site is updating in
+real-time. Use this curated list of topics to learn about the impacts and what to expect from this
+migration.
 
 ---
 
 ## Community & Discord
 
-<!--TODO:  Efforts are underway to streamline the Discord experience for current and new members. -->
-<!--TODO:  Looking to learn more about Solana development? checkout the [Solana Discord Server](https://discord.com/invite/kBbATFA7PW) -->
+> The people of the People's Network.
+
+- Efforts are underway to streamline the [Helium Discord](https://discord.gg/helium) experience for
+  current and new members.
+- Looking to learn more about Solana development? Checkout the
+  [Solana Discord Server](https://discord.com/invite/kBbATFA7PW)
 
 ---
 
-## Community Developers/Core Devs
+## Community Developers
 
-<!--TODO:  get help and join the conversation in discord channel -->
-<!--TODO:  check out the helium-progrma libraby on github -->
+> The Solana migration is another step in taking heavier operations off chain and towards Light
+> Hotspots.
 
----
-
-## Console Users
-
-<!--TODO:  chirpstack -->
-<!--TODO:  openLNS -->
+- Get help and join the conversation on the [Helium Discord](https://discord.gg/helium).
+- Check out the `helium-program-library`
+  [on Github](https://github.com/helium/helium-program-library).
 
 ---
 
-## ETL Instance Deployers
+## Console Users & LoRaWAN Roaming Partners
 
-<!--TODO:  ?not sure? -->
+> The Open LNS initiative allows anyone looking to deploy devices on the Helium Network to use any
+> LoRaWAN Network Server.
+
+- [Read more](/lorawan-on-helium/open-lns) about the Open LNS Initiative.
+- Learn more about [ChirpStack](https://www.chirpstack.io/), an open-source LoRaWAN Network Server.
 
 ---
 
-## Helium Blockchain & Console API Users (Community App Devs)
+## Helium Blockchain & Console API Users
 
-<!--TODO:  existing api will halt with helium chain -->
-<!--TODO:  access to oracle data and link to oracle data page -->
+> The existing [Blockchain API](/api/blockchain/introduction) will halt with the Helium L1
+> blockchain.
+
+- Data will be available via Oracles, read more about [Oracles and Data Access here](/oracles).
+- Data will be preserved, and efforts to maintain historical data are being evaluated.
 
 ---
 
 ## Helium Wallet CLI & Ledger CLI Users
 
-<!--TODO:  wallet-cli -> more infomration soon -->
-<!--TODO:  ledger cli -> solana cli clone with helium derivation path -->
+> Wallets created with the wallet-cli, the ledger-cli, or from ledger devices will migrate to the
+> Solana derivation path.
+
+- `wallet-cli`: The CLI Wallet will have its feature set pared down as there are many other
+  Solana-compatible CLI Wallets. Read more
+  [here](/solana/migration/wallet-user#for-cli-wallet-users).
+- `ledger cli`: A ledger cli is being generated from a clone of the solana-cli app, but using he
+  Helium derivation path. Read more [here](/solana/migration/wallet-user#for-ledger-wallet-users).
 
 ---
 
-## HIP Voters
+## Helium Improvement Proposal Voting
 
-<!--TODO:  thank for current process -->
-<!--TODO:  links to read about realms -->
-<!--TODO:  Vote Escrow Tokens -->
-<!--TODO:  subDAO governance -->
+> The Solana ecosystem is full of tools to facilitate Governance.
+
+- Improvement Proposal voting and other governance initiatives will be managed using
+  [Realms](https://app.realms.today/discover).
+- Voting will use Vote Escrow Tokens, read more
+  [here](/mine-hnt/validators/validators-and-voting-power).
+
+---
+
+## Hotspot Makers
+
+> Hotspot Makers will maintain their fleets and update Maker apps through the Solana migration.
+
+- Development guides for Maker Apps are [available here](/solana/migration/maker).
+- Makers with questions or in need of assistance should reach out
+  [on Discord](https://discord.com/channels/404106811252408320/1063168335367385268).
 
 ---
 
 ## Hotspot Operators
 
-<!--TODO:  link to migratino guide -->
-<!--TODO:  hotspots to start earning IOT instead of HNT -->
-<!--TODO:  existing HNT remains HNT -->
-<!--TODO:  IOT TOken Premine -->
+> No physical actions are required for Hotspots to migrate to the Solana blockchain. Though please
+> be on the lookout for recommendations from individual Hotspot Makers.
 
----
-
-## Hotspot Vendors
-
-<!--TODO:  maker apps update guides -->
-
----
-
-## LoRaWAN Roaming Partners
-
-<!--TODO:  openLNS and Helium Packet Router -->
-<!--TODO:  ?ask joey? -->
+- Read about what the migration means for Hotspot Operators
+  [here](/solana/migration/hotspot-operator).
 
 ---
 
 ## Token Holders
 
-<!--TODO:  new Tokens, IOT/MOBILE/HNT -->
-<!--TODO:  what happens to HNT -->
-<!--TODO:  reading on SPL Tokens -->
-<!--TODO:  wallets and exchanges -->
+> The migration to Solana will make all Helium Network tokens "SPL Tokens," enabling integrations
+> within Solana DeFi platforms and unlocking more decentralized trading venues.
+
+- Read about Heliun Network Tokens [here](/helium-tokens/hnt).
+- Read more about SPL Tokens on the [Solana Documentation site](https://spl.solana.com/token).
 
 ---
 
-## Validator Operators & Operators
+## Validators & Validator Operators
 
-<!--TODO:  thank you for your service -->
-<!--TODO:  call to action for working group on running more Oracles -->
+> Validators will no longer operate on the Solana blockchain.
+
+- As a reward for work done, Validators will recieve a share of the 2.5 billion IOT premine outlined
+  in [HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md).
