--- a/docs/migration-overview.mdx
+++ b/docs/migration-overview.mdx
@@ -1,11 +1,11 @@
 ---
 id: migration-overview
-title: Solana Migration Guides
-pagination_label: Solana Migration Guides
-sidebar_label: Start Here
-description: Solana Migration Guides
+title: Solana Migration Overview
+pagination_label: Solana Migration Overview
+sidebar_label: Migration Overview
+description: Solana Migration Overview
 image: https://i.imgur.com/bWAbESE.png
-slug: /solana/migration
+slug: /migration-overview
 draft: true
 ---
 
@@ -61,8 +61,8 @@ migration.
 
 ## Helium Wallet CLI & Ledger CLI Users
 
-> Wallets created with the wallet-cli, the ledger-cli, or from ledger devices will migrate to the
-> Solana derivation path.
+> Wallets created with the wallet-cli, the ledger-cli, or from ledger devices will migrate to Solana
+> but will be on a different derivation path.
 
 - `wallet-cli`: The CLI Wallet will have its feature set pared down as there are many other
   Solana-compatible CLI Wallets. Read more
