--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -68,7 +68,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         Helium blockchain is a new, open source, public blockchain created entirely to incentivize
         the creation of physical, decentralized wireless networks. Today, the Helium IoT Network,
         and its <a href="https://explorer.helium.com/hotspots">hundreds of thousands of Hotspots</a>
-        , provide access to the largest LoRaWAN Network in the world.
+        provide access to the largest LoRaWAN Network in the world.
       </p>
       <p>
         If, at any time, you don't find what you need, join us in{' '}
